Render reflections to 8 targets with geometry shader; Added smart collection of reflection planes; Added RenderTarget2DArray class; Refactored water shader; Fixed bugs in reflections; Fixed shader manager and added geometry shaders support;

--- a/TombEngine/TombEngine.vcxproj
+++ b/TombEngine/TombEngine.vcxproj
@@ -815,6 +815,7 @@ if not exist "%ScriptsDir%\Strings.lua" xcopy /Y "$(SolutionDir)Scripts\Strings.
     <ClInclude Include="Renderer\Frustum.h" />
     <ClInclude Include="Renderer\Graphics\IndexBuffer.h" />
     <ClInclude Include="Renderer\Graphics\RenderTarget2D.h" />
+    <ClInclude Include="Renderer\Graphics\RenderTarget2DArray.h" />
     <ClInclude Include="Renderer\Graphics\RenderTargetCube.h" />
     <ClInclude Include="Renderer\Graphics\Texture2D.h" />
     <ClInclude Include="Renderer\Graphics\Texture2DArray.h" />
