Implemented horizontal blur for water reflections

--- a/TombEngine/TombEngine.vcxproj
+++ b/TombEngine/TombEngine.vcxproj
@@ -1409,6 +1409,7 @@ if not exist "%ScriptsDir%\Strings.lua" xcopy /Y "$(SolutionDir)Scripts\Strings.
     <None Include="Shaders\CBStatic.hlsli">
       <DeploymentContent>true</DeploymentContent>
     </None>
+    <None Include="Shaders\PostProcessVertexInput.hlsli" />
     <None Include="Shaders\SMAA.hlsli">
       <DeploymentContent>true</DeploymentContent>
     </None>
