Input binding manager (#1566)
* First clean iteration of BindingManager class

* Fix key alignment errors; allow keys to have analog values

* Allow any input action to have an analog value

* Update comment

* Update key names

* Update queue state

* Update names

* Add comments

* Fix merge

* Fix mouse input

* Update constant name

* Fix merge errors

* Update formatting

* Fix merge errors; count game frames in input action class properly

* float -> unsigned long, renames

* Formatting

* Constants for key offsets

* New registry version

* Minor changes

* Fix saving

* Update InputAction.cpp

* Renames

* Minor changes

* Temporary rename + comments

* Update InputAction.cpp

---------

Co-authored-by: Lwmte <3331699+Lwmte@users.noreply.github.com>

--- a/TombEngine/TombEngine.vcxproj
+++ b/TombEngine/TombEngine.vcxproj
@@ -948,6 +948,8 @@ if not exist "%ScriptsDir%\Strings.lua" xcopy /Y "$(SolutionDir)Scripts\Strings.
     <ClInclude Include="Sound\sound.h" />
     <ClInclude Include="Sound\sound_effects.h" />
     <ClInclude Include="Specific\BitField.h" />
+    <ClInclude Include="Specific\Input\Bindings.h" />
+    <ClInclude Include="Specific\Input\Keys.h" />
     <ClInclude Include="Specific\IO\ChunkId.h" />
     <ClInclude Include="Specific\IO\ChunkReader.h" />
     <ClInclude Include="Specific\IO\ChunkWriter.h" />
@@ -1373,8 +1375,10 @@ if not exist "%ScriptsDir%\Strings.lua" xcopy /Y "$(SolutionDir)Scripts\Strings.
     <ClCompile Include="Specific\BitField.cpp" />
     <ClCompile Include="Specific\clock.cpp" />
     <ClCompile Include="Specific\configuration.cpp" />
+    <ClCompile Include="Specific\Input\Bindings.cpp" />
     <ClCompile Include="Specific\Input\Input.cpp" />
     <ClCompile Include="Specific\Input\InputAction.cpp" />
+    <ClCompile Include="Specific\Input\Keys.cpp" />
     <ClCompile Include="Specific\IO\ChunkId.cpp" />
     <ClCompile Include="Specific\IO\ChunkReader.cpp" />
     <ClCompile Include="Specific\IO\Streams.cpp" />
