--- a/TombEngine/TombEngine.vcxproj
+++ b/TombEngine/TombEngine.vcxproj
@@ -781,6 +781,7 @@ if not exist "%ScriptsDir%\Strings.lua" xcopy /Y "$(SolutionDir)Scripts\Strings.
     <ClInclude Include="Renderer\Graphics\Texture2D.h" />
     <ClInclude Include="Renderer\Graphics\Texture2DArray.h" />
     <ClInclude Include="Renderer\Graphics\TextureBase.h" />
+    <ClInclude Include="Renderer\Graphics\UAVBuffer.h" />
     <ClInclude Include="Renderer\Graphics\UAVRenderTarget2D.h" />
     <ClInclude Include="Renderer\Graphics\VertexBuffer.h" />
     <ClInclude Include="Renderer\Graphics\Vertices\PostProcessVertex.h" />
@@ -833,6 +834,7 @@ if not exist "%ScriptsDir%\Strings.lua" xcopy /Y "$(SolutionDir)Scripts\Strings.
     <ClInclude Include="Renderer\Structures\RendererStringToDraw.h" />
     <ClInclude Include="Renderer\Structures\RendererTriangle3D.h" />
     <ClInclude Include="Renderer\Structures\RendererWaterPlaneBucket.h" />
+    <ClInclude Include="Renderer\Structures\RendererRipple.h" />
     <ClInclude Include="Scripting\Include\Flow\ScriptInterfaceFlowHandler.h" />
     <ClInclude Include="Scripting\Include\Objects\ScriptInterfaceObjectsHandler.h" />
     <ClInclude Include="Scripting\Include\ScriptInterfaceGame.h" />
